kubernetes/charts/core-services/cilium/templates/baseline-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-allow-coredns
spec:
  endpointSelector: {}
  enableDefaultDeny:
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-allow-host-probes
spec:
  endpointSelector: {}
  enableDefaultDeny:
    ingress: false
  ingress:
    - fromEntities:
        - host
